# RustRig

./: .gitignore  Cargo.toml  NOTICE.md  README.md
crates/rustrig-app/: Cargo.toml
crates/rustrig-app/src/: main.rs  widgets.rs
crates/rustrig-audio/: Cargo.toml
crates/rustrig-audio/src/: asio.rs  backend.rs  devices.rs  lib.rs  ring.rs  rt.rs  wasapi.rs
crates/rustrig-dsp/: Cargo.toml
crates/rustrig-dsp/src/: cab.rs  comp.rs  delay.rs  drive.rs  gate.rs  lib.rs  metro.rs  nam.rs  reverb.rs  tuner.rs
